Add link to frontpage

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 						<a class="btn btn-primary btn-large" href="http://github.com/addyosmani/todomvc/zipball/labs">Download Latest</a>
 						<a class="btn btn-large" href="http://github.com/addyosmani/todomvc">Follow on GitHub</a>
 					</nav>
+					<p style="font-size:16px"><a href="http://todomvc.com">⬅ Home</a></p>
 				</div>
 			</header>
 			<div class="row">
