Update labs/index.html paths

--- a/labs/index.html
+++ b/labs/index.html
@@ -8,12 +8,12 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="site/css/bootstrap.min.css" rel="stylesheet">
-		<link href="site/css/bootstrap-responsive.min.css" rel="stylesheet">
-		<link href="site/css/main.css" rel="stylesheet">
+		<link href="../site/css/bootstrap.min.css" rel="stylesheet">
+		<link href="../site/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="../site/css/main.css" rel="stylesheet">
 		<style>
 		/* main site overrides */
-		.nav{
+		.nav {
 			width: 150px !important;
 		}
 
@@ -34,7 +34,7 @@
 		<div class="container">
 			<header class="hero-unit row">
 				<div class="span4 screenshot">
-					<img src="site/screenshot.png" width="528" height="330">
+					<img src="../site/screenshot.png" width="528" height="330">
 				</div>
 				<div class="span5 header-title">
 					<h1>TodoMVC Labs</h1>
@@ -169,9 +169,9 @@
 			</footer>
 		</div>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-		<script src="site/js/jquery.hoverIntent.min.js"></script>
-		<script src="site/js/bootstrap.min.js"></script>
-		<script src="site/js/main.js"></script>
+		<script src="../assets/jquery.min.js"></script>
+		<script src="../site/js/jquery.hoverIntent.min.js"></script>
+		<script src="../site/js/bootstrap.min.js"></script>
+		<script src="../site/js/main.js"></script>
 	</body>
 </html>
