--- a/labs/architecture-examples/dijon/index.html
+++ b/labs/architecture-examples/dijon/index.html
@@ -2,14 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-<<<<<<< HEAD:architecture-examples/jquery/index.html
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>jQuery • TodoMVC</title>
-	<link rel="stylesheet" href="../../assets/base.css">
-=======
-	<title>jQuery - TodoMVC</title>
-	<link rel="stylesheet" href="css/app.css">
->>>>>>> refs/heads/labs:labs/architecture-examples/dijon/index.html
+	<link rel="stylesheet" href="../../../assets/base.css">
 </head>
 <body>
 	<section id="todoapp">
@@ -26,23 +21,11 @@
 			<span id="todo-count"><strong>0</strong> item left</span>
 			<button id="clear-completed">Clear completed</button>
 		</footer>
-<<<<<<< HEAD:architecture-examples/jquery/index.html
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>App and template and created by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-=======
-	</div>
-	<div id="instructions">
-		Double-click to edit a todo.
-	</div>
-	<div id="credits">
-		<p>Created by <a href="http://sindresorhus.com">Sindre Sorhus</a>.</p>
-		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-	</div>
->>>>>>> refs/heads/labs:labs/architecture-examples/dijon/index.html
 	<script type="text/x-handlebars-template" id="todo-template">
 	{{#this}}
 	<li {{#if completed}}class="completed"{{/if}} data-id="{{id}}">
@@ -55,10 +38,6 @@
 	</li>
 	{{/this}}
 	</script>
-<<<<<<< HEAD:architecture-examples/jquery/index.html
-	<script src="../../assets/jquery.min.js"></script>
-	<script src="../../assets/handlebars.min.js"></script>
-=======
 	<script src="js/libs/json2.js"></script>
 	<script src="js/libs/jquery-1.7.1.min.js"></script>
 	<script src="js/libs/handlebars-1.0.0.beta.6.js"></script>
@@ -71,7 +50,5 @@
     <script src="js/views/FooterView.js"></script>
     <script src="js/views/TodoFormView.js"></script>
     <script src="js/views/TodoListView.js"></script>
->>>>>>> refs/heads/labs:labs/architecture-examples/dijon/index.html
-	<script src="js/app.js"></script>
 </body>
 </html>
