grammar fix - it's to its
it's -> it is
its -> belonging to it

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ had it been designed for web apps">AngularJS</a>
 					<h2>Selecting a Framework</h2>
 					<p>Once you've downloaded the latest release and played around with the apps, you'll want to decide on a specific framework to try out.</p>
 					<p>Study the syntax required for defining models, views and (where applicable) controllers and classes in the frameworks you're interested in and try your hand at editing the code to see how it feels using it first-hand.</p>
-					<p>Please <strong>ensure</strong> that if you're happy with this, you do spend more time investigating the framework (including reading the official docs, the source and it's complete feature list). There's often a lot more to a framework than what we present in our examples.</p>
+					<p>Please <strong>ensure</strong> that if you're happy with this, you do spend more time investigating the framework (including reading the official docs, the source and its complete feature list). There's often a lot more to a framework than what we present in our examples.</p>
 			</div>
 				<div class="span4">
 					<h2>Getting Involved</h2>
