--- a/labs/architecture-examples/dijon/index.html
+++ b/labs/architecture-examples/dijon/index.html
@@ -22,7 +22,7 @@
 			<button id="clear-completed">Clear completed</button>
 		</footer>
 	</section>
-    <footer id="info">
+	<footer id="info">
 		<p>Double-click to edit a todo</p>
 		<p>Based on app and template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://www.creynders.be">Camille Reynders</a></p>
@@ -42,14 +42,14 @@
 	</script>
 	<script src="../../../assets/jquery.min.js"></script>
 	<script src="../../../assets/handlebars.min.js"></script>
-    <script src="http://creynders.github.com/dijon-framework/bin/dijon-0.5.3.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/models/TodosModel.js"></script>
-    <script src="js/services/LocalStorageService.js"></script>
-    <script src="js/utils/Utils.js"></script>
-    <script src="js/views/FooterView.js"></script>
-    <script src="js/views/TodoFormView.js"></script>
-    <script src="js/views/TodoListView.js"></script>
+	<script src="js/lib/dijon-0.5.3.min.js"></script>
+	<script src="js/config.js"></script>
+	<script src="js/models/TodosModel.js"></script>
+	<script src="js/services/LocalStorageService.js"></script>
+	<script src="js/utils/Utils.js"></script>
+	<script src="js/views/FooterView.js"></script>
+	<script src="js/views/TodoFormView.js"></script>
+	<script src="js/views/TodoListView.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
