--- a/labs/index.html
+++ b/labs/index.html
@@ -43,7 +43,7 @@
 						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/todomvc/labs" data-via="addyosmani">Tweet</a>
 					</p>
 					<nav>
-						<a class="btn btn-primary btn-large" href="http://github.com/addyosmani/todomvc/zipball/labs">Download Latest</a>
+                                                <a class="btn btn-primary btn-large" href="https://github.com/addyosmani/todomvc/zipball/master">Download Latest</a>
 						<a class="btn btn-large" href="http://github.com/addyosmani/todomvc">Follow on GitHub</a>
 					</nav>
 					<p style="font-size:16px"><a href="http://todomvc.com">⬅ Home</a></p>
@@ -138,7 +138,7 @@
 				</div>
 				<div class="span3">
 					<h2>Contributing</h2>
-					<p>Interested in helping us improve or complete these applications?</p><p>Please feel free to get involved by taking a look at our <a href="https://github.com/addyosmani/todomvc/issues">issue tracker</a> or reviewing one of these apps on the <a href="https://github.com/addyosmani/todomvc/tree/labs">labs branch</a> of TodoMVC.</p>
+                                        <p>Interested in helping us improve or complete these applications?</p><p>Please feel free to get involved by taking a look at our <a href="https://github.com/addyosmani/todomvc/issues">issue tracker</a> or reviewing one of these apps on the <a href="https://github.com/addyosmani/todomvc/tree/master/labs">labs folder</a> of TodoMVC.</p>
 					<p>We're currently working towards bringing all applications in-line with our official <a href="https://github.com/addyosmani/todomvc/wiki/App-Specification">specifications</a> using an updated <a href="https://github.com/addyosmani/todomvc/tree/master/template">template</a> to ensure consistency in style.</p>
 					<p>If you would like to get involved or simply suggest ideas for how we can improve the project further, please feel free to <a href="https://github.com/addyosmani/">reach</a> <a href="https://github.com/sindresorhus/">out</a>.</p>
 				</div>
