--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -2,62 +2,62 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Backbone.js</title>
-	<link rel="stylesheet" href="css/app.css"/>
+	<link rel="stylesheet" href="../../assets/base.css"/>
 </head>
 <body>
-	<div id="todoapp">
-		<header>
+	<section id="todoapp">
+		<header id="header">
 			<h1>Todos</h1>
-			<input id="new-todo" type="text" placeholder="What needs to be done?">
+			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
-
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as complete</label>
-			<ul id="todo-list">
-			</ul>
+			<ul id="todo-list"></ul>
 		</section>
-
-		<footer>
-			<a id="clear-completed">Clear completed</a>
-			<div id="todo-count"></div>
-		</footer>
-	</div>
-	<div id="instructions">
-		Double-click to edit a todo.
-	</div>
-	<div id="credits">
-		Created by
-		<br />
-		<a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>.
-		<br />Cleanup, edits: <a href="http://addyosmani.com">Addy Osmani</a>, <a href="http://github.com/boushley">Aaron Boushley</a>.
-	</div>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Created by <a href="http://addyosmani.github.com/todomvc/">Addy Osmani</a></p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>
 
 	<script src="js/libs/json2.js"></script>
-	<script src="js/libs/jquery-1.7.1.min.js"></script>
+	<script src="../../assets/jquery.min.js"></script>
 	<script src="js/libs/underscore.js"></script>
 	<script src="js/libs/backbone.js"></script>
 	<script src="js/libs/backbone-localstorage.js"></script>
 	<script src="js/app.js"></script>
 
-	<!-- Templates -->
-
 	<script type="text/template" id="item-template">
 		<div class="view">
 			<input class="toggle" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
 			<label><%= title %></label>
-			<a class="destroy"></a>
+			<button class="destroy"></button>
 		</div>
 		<input class="edit" type="text" value="<%= title %>" />
 	</script>
-
+	
 	<script type="text/template" id="stats-template">
-		<% if (done) { %>
-			<a id="clear-completed">Clear <%= done %> completed <%= done == 1 ? 'item' : 'items' %></a>
+		<footer id="footer">
+			<span id="todo-count"><strong><%= remaining %></strong> <%= remaining == 1 ? 'item' : 'items' %> left</span>
+			<ul id="filters">
+				<li>
+					<a class="selected" href="#/">All</a>
+				</li>
+				<li>
+					<a href="#/active">Active</a>
+				</li>
+				<li>
+					<a href="#/completed">Completed</a>
+				</li>
+			</ul>
+			<% if (done) { %>
+			<button id="clear-completed">Clear <%= done %> completed <%= done == 1 ? 'item' : 'items' %></button>
 			<% } %>
-		<div class="todo-count"><b><%= remaining %></b> <%= remaining == 1 ? 'item' : 'items' %> left</div>
+		</footer>
 	</script>
-
 </body>
 </html>
