--- a/reference-examples/vanillajs/index.html
+++ b/reference-examples/vanillajs/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="css/todos.css" rel="stylesheet" type="text/css">
-        <script src="js/todo.js"></script>
-		<script src="js/json2.js"></script>
-    </head>
+<head>
+        <meta charset="utf-8">
+        <title>VanillaJS • TodoMVC</title>
+        <link rel="stylesheet" href="../../assets/base.css">
+</head>
 
-    <body onload="bodyLoadHandler()">
+<body>
 
-        <div id="todoapp">
+        <section id="todoapp">
+                <header id="header">
+                        <h1>Todos</h1>
+                        <input id="new-todo" placeholder="What needs to be done?" autofocus>
+                </header>
 
-            <div class="title">
-                <h1>Todos</h1>
-            </div>
+                <section id="main">
+                        <input id="toggle-all" type="checkbox" >
+                        <label for="toggle-all">Mark all as complete</label>
+                        <ul id="todo-list">
 
+                        </ul>
+                </section>
 
-            <div class="content">
+                <footer id="footer">
+                        <span id="todo-count"></span>
+                        <button id="clear-completed">Clear completed</button>
+                </footer>
+        </section>
 
-                <div id="create-todo">
-                    <input id="new-todo" placeholder="What needs to be done?" onkeypress="newTodoKeyPressHandler(event)">
-                    <span class="ui-tooltip-top" style="display:none;">Press Enter to save this task</span>
-                </div>
+        <footer id="info">
+                <p>Double-click to edit a todo.</p>
+                <p>Created by <a href="http://twitter.com/ffesseler">Florian Fesseler</a></p>
+                <p>Cleanup, edits: <a href="http://github.com/boushley">Aaron Boushley</a>.</p>
+        </footer>
 
-                <div id="todos">
-                    <ul id="todo-list">
+        <!-- scripts here -->
+        <script src="js/app.js"></script>
 
-                    </ul>
-                </div>
-
-                <div id="todo-stats">
-                    
-                </div>
-            </div>
-
-
-        </div>
-
-    </body>
+</body>
 </html>
