--- a/labs/architecture-examples/olives/index.html
+++ b/labs/architecture-examples/olives/index.html
@@ -2,56 +2,50 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Olives + Emily - TodoMVC</title>
-	<link rel="stylesheet" href="css/base.css" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Olives • TodoMVC</title>
+	<link rel="stylesheet" href="../../../assets/base.css">
+	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-	<div id="todoapp">
-		<header>
+	<section id="todoapp">
+		<header id="header">
 			<h1>Todos</h1>
-			<input type="text" placeholder="What needs to be done?" data-event="listen:keydown,add">
+			<input id="new-todo" placeholder="What needs to be done?" autofocus data-event="listen:keydown,addTask">
 		</header>
-		<!-- this section is hidden by default and you be shown when there are todos and hidden when not -->
 		<section id="main" data-stats="bind:toggleClass,nbItems,show">
-			<input id="toggle-all" type="checkbox" data-stats="bind:checked,allChecked">
+			<input id="toggle-all" type="checkbox" data-event="listen:click,toggleAll" data-stats="bind:toggleCheck,nbCompleted">
 			<label for="toggle-all">Mark all as complete</label>
-			
 			<ul id="todo-list" data-model="foreach">
-				<li data-model="bind:toggleClass,completed,done; bind:toggleClass,edit,editing">
-					<div class="view">
+				<li data-model="bind:toggleClass,completed,completed;">
+					<div class="view" data-event="listen:dblclick,startEdit">
 						<input class="toggle" type="checkbox" data-model="bind:checked,completed">
-						<label data-model="bind:innerHTML,name" data-event="listen:dblclick,edit;" ></label>
-						<a class="destroy" data-event="listen:click,remove"></a>
+						<label data-model="bind:innerHTML,title"></label>
+						<button class="destroy" data-event="listen:click,remove"></button>
 					</div>
-					<input class="edit" type="text" data-model="bind:value,name" data-event="listen:keydown,edit; listen:blur,edit" />
+					<input class="edit" data-model="bind:value,title" data-event="listen:keydown,stopEdit; listen:blur,stopEdit">
 				</li>
 			</ul>
 		</section>
-		<!-- this footer needs to be shown with JS when there are todos and hidden when not -->
-		<footer data-stats="bind:toggleClass,nbItems,show">
-			<span class="todo-count">
-				<strong data-stats="bind:innerHTML,uncompleted"></strong>
-				<span data-stats="bind:innerHTML,uncompletedWord"></span> left.
-			</span>
-			
-			<span class="todo-clear">
-				<a href="#" data-event="listen:click,clear;" id="clear-completed" data-stats="bind:toggleClass,completed,show">
-				Clear <strong data-stats="bind:innerHTML,completed"></strong> 
-				completed <span data-stats="bind:innerHTML,completedWord">item</span></a>
-			</span>
+		<footer id="footer" data-stats="bind:toggleClass,nbItems,show">
+			<span id="todo-count"><strong data-stats="bind:innerHTML,nbLeft">0</strong> <span data-stats="bind:innerHTML,plural"></span> left</span>
+			<button id="clear-completed" data-event="listen:click,delAll" data-stats="bind:toggleClass,nbCompleted,show">Clear completed (<span data-stats="bind:innerHTML,nbCompleted"></span>)</button>
 		</footer>
-	</div>
-	<div id="instructions">
-		Double-Click to edit a todo.
-	</div>
-	<div id="credits">
-		<p>Created by <a href="http://github.com/podefr/">Olivier Scherrer</a>.</p>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>Created by <a href="http://github.com/podefr">Olivier Scherrer</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-	</div>
-	<!-- scripts here -->
-  <script src="js/libs/require.js"></script>           
-  <script src="js/libs/Emily.js"></script>
-  <script src="js/libs/Olives.js"></script>
-  <script src="js/app.js"></script>
+	</footer>
+	<script src="../../../assets/base.js"></script>
+	<script src="js/lib/require.js"></script>
+	<script src="js/lib/Emily.js"></script>
+	<script src="js/lib/Olives.js"></script>
+	<script src="js/lib/Tools.js"></script>
+	<script src="js/uis/Input.js"></script>
+	<script src="js/uis/List.js"></script>
+	<script src="js/uis/Controls.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
