--- a/reference-examples/vanillajs/index.html
+++ b/reference-examples/vanillajs/index.html
@@ -1,41 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-        <meta charset="utf-8">
-        <title>VanillaJS • TodoMVC</title>
-        <link rel="stylesheet" href="../../assets/base.css">
+	<meta charset="utf-8">
+	<title>VanillaJS • TodoMVC</title>
+	<link rel="stylesheet" href="../../assets/base.css">
 </head>
-
 <body>
-
-        <section id="todoapp">
-                <header id="header">
-                        <h1>Todos</h1>
-                        <input id="new-todo" placeholder="What needs to be done?" autofocus>
-                </header>
-
-                <section id="main">
-                        <input id="toggle-all" type="checkbox" >
-                        <label for="toggle-all">Mark all as complete</label>
-                        <ul id="todo-list">
-
-                        </ul>
-                </section>
-
-                <footer id="footer">
-                        <span id="todo-count"></span>
-                        <button id="clear-completed">Clear completed</button>
-                </footer>
-        </section>
-
-        <footer id="info">
-                <p>Double-click to edit a todo.</p>
-                <p>Created by <a href="http://twitter.com/ffesseler">Florian Fesseler</a></p>
-                <p>Cleanup, edits: <a href="http://github.com/boushley">Aaron Boushley</a>.</p>
-        </footer>
-
-        <!-- scripts here -->
-        <script src="js/app.js"></script>
-
+	<section id="todoapp">
+		<header id="header">
+			<h1>Todos</h1>
+			<input id="new-todo" placeholder="What needs to be done?" autofocus>
+		</header>
+		<section id="main">
+			<input id="toggle-all" type="checkbox" >
+			<label for="toggle-all">Mark all as complete</label>
+			<ul id="todo-list"></ul>
+		</section>
+		<footer id="footer">
+			<span id="todo-count"></span>
+			<button id="clear-completed">Clear completed</button>
+		</footer>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Created by <a href="http://twitter.com/ffesseler">Florian Fesseler</a></p>
+		<p>Cleanup, edits by <a href="http://github.com/boushley">Aaron Boushley</a></p>
+	</footer>
+	<script src="js/app.js"></script>
 </body>
 </html>
