--- a/labs/architecture-examples/o_O/index.html
+++ b/labs/architecture-examples/o_O/index.html
@@ -9,38 +9,36 @@
 	<section id="todoapp">
 		<header id="header">
 			<h1>Todos</h1>
-			<input id="new-todo" data-bind="value: current; enterKey: add" placeholder="What needs to be done?">  
-		</header>                  
+			<input id="new-todo" data-bind="value: current; enterKey: add" placeholder="What needs to be done?">
+		</header>
 		<section id="main" data-bind="visible: todos.count">
 			<div>
-			     <input id="toggle-all" type="checkbox" data-bind="value: allCompleted;">
-			     <label for="toggle-all">Mark all as complete</label>
+				 <input id="toggle-all" type="checkbox" data-bind="value: allCompleted;">
+				 <label for="toggle-all">Mark all as complete</label>
 			</div>
 			<ul id="todo-list" data-bind="foreach: todos">
-      	<li data-bind="class: klass; visible; dblclick: startEditing">
-      		<div class="view">
-      			<input class="toggle" type="checkbox" data-bind="value: completed">
-      			<label data-bind="text: title"></label>
-      			<button class="destroy" data-bind="click: remove"></button>
-      		</div>
-          <input class="edit" data-bind="value: title; enterKey: stopEditing; blur: stopEditing" />
-      	</li>
-        
+				<li data-bind="class: klass; visible; dblclick: startEditing">
+					<div class="view">
+						<input class="toggle" type="checkbox" data-bind="value: completed">
+						<label data-bind="text: title"></label>
+						<button class="destroy" data-bind="click: remove"></button>
+					</div>
+				  <input class="edit" data-bind="value: title; enterKey: stopEditing; blur: stopEditing" />
+				</li>
 			</ul>
 		</section>
 		<footer id="footer" data-bind="visible: todos.count">
 			<span id="todo-count">
-			    <strong data-bind="text: remainingCount"></strong>
-          <span class="word" data-bind="text: pluralize('item', remainingCount())"></span> left
+				<strong data-bind="text: remainingCount"></strong>
+				<span class="word" data-bind="text: pluralize('item', remainingCount())"></span> left
 			</span>
-            <ul id="filters" >
-                <li><a href="#/">All</a></li>
+			<ul id="filters" >
+				<li><a href="#/">All</a></li>
 				<li><a href="#/active">Active</a></li>
 				<li><a href="#/completed">Completed</a></li>
 			</ul>
 			<button id="clear-completed" data-bind="click: removeCompleted; visible: completedCount">
-                Clear completed
-                (<span data-bind='text: completedCount'></span>)
+				Clear completed (<span data-bind='text: completedCount'></span>)
 			</button>
 		</footer>
 	</section>
@@ -48,9 +46,9 @@
 		<p>Double-click to edit a todo</p>
 		<p>Created by <a href="http://weepy.github.com">weepy (Jonah Fox)</a></p>
 	</footer>
-    <script src="../../../assets/jquery.min.js"></script>
-    <script src="js/lib/o_O.js" type="text/javascript"></script>
-    <script src="js/lib/o_O.router.js" type="text/javascript"></script>
-    <script src="js/app.js"></script>
+	<script src="../../../assets/jquery.min.js"></script>
+	<script src="js/lib/o_O.js" ></script>
+	<script src="js/lib/o_O.router.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
