Ember.js + require app: cleanup

--- a/dependency-examples/emberjs_require/index.html
+++ b/dependency-examples/emberjs_require/index.html
@@ -19,8 +19,9 @@
 		<p>Double-click to edit a todo</p>
 		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 		<p>
-			Created by <a href="http://github.com/tomdale/">Tom Dale</a>,
-			<a href="http://github.com/stas/">Стас Сушков</a>
+			Created by 
+			<a href="http://github.com/tomdale">Tom Dale</a>,
+			<a href="http://github.com/stas">Стас Сушков</a>
 		</p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
