Add Analytics to the site

--- a/index.html
+++ b/index.html
@@ -143,10 +143,11 @@ had it been designed for web apps">AngularJS</a>
 				<p id="contributor-list">Big thanks to our magnificent contributors: <span></span></p>
 			</footer>
 		</div>
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		<script src="assets/jquery.min.js"></script>
 		<script src="site/js/jquery.hoverIntent.min.js"></script>
 		<script src="site/js/bootstrap.min.js"></script>
 		<script src="site/js/main.js"></script>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		<script>var _gaq=[['_setAccount','UA-31081062-1'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));</script>
 	</body>
 </html>
