--- a/dependency-examples/emberjs_require/index.html
+++ b/dependency-examples/emberjs_require/index.html
@@ -6,6 +6,9 @@
 	<title>ember.js + require.js • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
 	<link rel="stylesheet" href="css/app.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -25,6 +28,7 @@
 		</p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
+	<script src="../../assets/base.js"></script>
 	<script data-main="js/app.js" src="js/lib/require/require.js"></script>
 </body>
 </html>
