--- a/architecture-examples/agilityjs/index.html
+++ b/architecture-examples/agilityjs/index.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<title>Agility.js • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -11,7 +14,6 @@
 			<h1>todos</h1>
 			<input id="new-todo" type="text" data-bind="newtitle" placeholder="What needs to be done?" autofocus>
 		</header>
-
 		<section id="main" data-bind="class = mainStyle">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as completed</label>
@@ -26,10 +28,8 @@
 				</li>
 			</ul>
 		</section>
-
 		<footer id="footer" data-bind="class = mainStyle">
 		<span id="todo-count"><strong data-bind='todoCount'></strong> item<span data-bind='pluralizer'></span> left</span>
-
 			<ul id="filters">
 				<li>
 					<a class="selected" href="#/">All</a>
@@ -49,7 +49,7 @@
 		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://github.com/tshm/todomvc/">Tosh Shimayama</a></p>
 	</footer>
-
+	<script src="../../assets/base.js"></script>
 	<script src="../../assets/jquery.min.js"></script>
 	<script src="js/lib/agility.min.js"></script>
 	<script src="js/localstorage.js"></script>
