--- a/architecture-examples/closure/index.html
+++ b/architecture-examples/closure/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-<title>Closure</title>
-<link href="css/todos.css" media="all" rel="stylesheet" type="text/css" />
+	<title>Closure • TodoMVC</title>
+	<link href="css/todos.css" rel="stylesheet">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<div id="todoapp">
@@ -11,10 +14,7 @@
 		</div>
 		<div class="content">
 			<div id="create-todo">
-				<input id="new-todo"
-					placeholder="What needs to be done?" type="text" /> <span
-					class="ui-tooltip-top" style="display: none;">Press Enter to
-					save this task</span>
+				<input id="new-todo" placeholder="What needs to be done?" type="text">
 			</div>
 			<div id="todos">
 				<ul id="todo-list">
@@ -25,13 +25,12 @@
 		</div>
 	</div>
 	<ul id="instructions">
-		<li>Click to edit a todo.</li>
+		<li>Click to edit a todo</li>
 	</ul>
 	<div id="credits">
-		Created by <br /> <a href="http://jgn.me/">J&eacute;r&ocirc;me
-			Gravel-Niquet</a> <br /> Modified to use Closure by <a
-			href="http://www.scottlogic.co.uk/blog/chris/">Chris Price</a>
+		Created by <a href="http://www.scottlogic.co.uk/blog/chris/">Chris Price</a>
 	</div>
+	<script src="../../assets/base.js"></script>
 	<!-- The compiled version (to update run java -jar build/plovr.jar build plovr.json > web/compiled.js) -->
 	<script type="text/javascript" src="js/compiled.js"></script>
 	<!-- The RAW development version (to serve the files run java -jar build/plovr.jar serve plovr.json) -->
