--- a/architecture-examples/extjs/index.html
+++ b/architecture-examples/extjs/index.html
@@ -1,25 +1,24 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>ExtJS</title>
-
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-
-    <body>
-        <div id="todo">
-            <h1>Todos</h1>
-            <input type="text" id="taskfield" placeholder="What needs to be done?" />
-        </div>
-        <div class="credits">
-            Credits:<br /><a href="http://revolunet.com/">Revolunet</a>
-        </div>
-
-        <script type="text/javascript" src="http://extjs.cachefly.net/ext-4.0.2a/bootstrap.js"></script>
-        <script src="js/app.js"></script>
-    </body>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>ExtJS• TodoMVC</title>
+	<link rel="stylesheet" href="css/style.css">
+	<!--[if IE]>
+	<script src="../assets/ie.js"></script>
+	<![endif]-->
+</head>
+<body>
+	<div id="todo">
+		<h1>Todos</h1>
+		<input type="text" id="taskfield" placeholder="What needs to be done?" />
+	</div>
+	<div class="credits">
+		Credits:<br /><a href="http://revolunet.com/">Revolunet</a>
+	</div>
+	<script src="../../assets/base.js"></script>
+	<script src="http://extjs.cachefly.net/ext-4.0.2a/bootstrap.js"></script>
+	<script src="js/app.js"></script>
+</body>
 </html>
