--- a/architecture-examples/jquery/index.html
+++ b/architecture-examples/jquery/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>jQuery • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -24,7 +27,7 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>App and template and created by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>App and template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 	<script type="text/x-handlebars-template" id="todo-template">
@@ -39,6 +42,7 @@
 	</li>
 	{{/this}}
 	</script>
+	<script src="../../assets/base.js"></script>
 	<script src="../../assets/jquery.min.js"></script>
 	<script src="../../assets/handlebars.min.js"></script>
 	<script src="js/app.js"></script>
