--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Knockout.js • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
 		<header id="header">
 			<h1>todos</h1>
 			<input id="new-todo" type="text" data-bind="value: current, valueUpdate: 'afterkeydown', enterKey: add"
-					placeholder="What needs to be done?" autofocus >
+					placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main" data-bind="visible: todos().length">
 			<input id="toggle-all" type="checkbox" data-bind="checked: allCompleted">
@@ -40,8 +44,8 @@
 		<p>Rewritten to use Knockout 2.0 and standard template by <a href="http://knockmeout.net">Ryan Niemeyer</a></p>
 		<p>Patches/fixes for cross-browser compat: <a href="http://twitter.com/addyosmani">Addy Osmani</a></p>
 	</footer>
-
-	<script src="js/lib/knockout-2.0.0.js" type="text/javascript"></script>
-	<script src="js/app.js" type="text/javascript"></script>
+	<script src="../../assets/base.js"></script>
+	<script src="js/lib/knockout-2.0.0.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
