--- a/architecture-examples/sammyjs/index.html
+++ b/architecture-examples/sammyjs/index.html
@@ -1,52 +1,41 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Sammy.js</title>
-        <link rel="stylesheet" href="app.css" type="text/css" media="screen" charset="utf-8">
-        
-        <script src="http://code.jquery.com/jquery-1.6.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="lib/sammy.js" type="text/javascript" charset="utf-8"></script>
-        <script src="lib/sammy.template.js" type="text/javascript" charset="utf-8"></script>
-        <script src="lib/model.js" type="text/javascript" charset="utf-8"></script>
-        <script src="app.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" charset="utf-8">
-            if (!('localStorage' in window)) {
-            		alert('Your browser does not support localStorage');
-	            }
-        </script>
-    </head>
-    <body>
-	
-	
-	
-	    <div id="todoapp">
-	        <div class="title">
-	            <h1>Todos</h1>
-	        </div>
-	        <div class="content">
-	            <div id="create-todo">
-	                <input id="new-todo" placeholder="What needs to be done?"
-	                    type="text" />
-	                <span class="ui-tooltip-top" style="display: none;">Press Enter to save this task</span>
-	            </div>
-	            <div id="todos">
-	                <ul id="todo-list">
-	                </ul>
-	            </div>
-	            <div id="todo-stats">
-	            </div>
-	        </div>
-	    </div>
-
-	    <div id="credits">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>Sammy.js • TodoMVC</title>
+		<link rel="stylesheet" href="app.css">
+		<!--[if IE]>
+		<script src="../../assets/ie.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div id="todoapp">
+			<div class="title">
+				<h1>todos</h1>
+			</div>
+			<div class="content">
+				<div id="create-todo">
+					<input id="new-todo" placeholder="What needs to be done?" type="text">
+				</div>
+				<div id="todos">
+					<ul id="todo-list"></ul>
+				</div>
+				<div id="todo-stats"></div>
+			</div>
+		</div>
+		<div id="credits">
 			This version by
-	        <br />
-	        <a href="http://twitter.com/addyosmani">Addy Osmani</a>
+			<br />
+			<a href="http://twitter.com/addyosmani">Addy Osmani</a>
 			<br />
 			based on some code by Brandon Aaron
-	    </div>
-	
-
-    </body>
+		</div>
+		<script src="../../assets/base.js"></script>
+		<script src="../../assets/jquery.min.js"></script>
+		<script src="lib/sammy.js"></script>
+		<script src="lib/sammy.template.js"></script>
+		<script src="lib/model.js"></script>
+		<script src="app.js"></script>
+	</body>
 </html>
