--- a/reference-examples/vanillajs/index.html
+++ b/reference-examples/vanillajs/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>VanillaJS • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -12,7 +16,7 @@
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<section id="main">
-			<input id="toggle-all" type="checkbox" >
+			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list"></ul>
 		</section>
@@ -26,6 +30,7 @@
 		<p>Created by <a href="http://twitter.com/ffesseler">Florian Fesseler</a></p>
 		<p>Cleanup, edits by <a href="http://github.com/boushley">Aaron Boushley</a></p>
 	</footer>
+	<script src="../../assets/base.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
