Add ie.js and analytics to the labs apps not currently in pull request queue

--- a/labs/architecture-examples/duel/www/index.html
+++ b/labs/architecture-examples/duel/www/index.html
@@ -7,16 +7,18 @@
 	<title>DUEL &bull; TodoMVC</title>
 
 	<link rel="stylesheet" href="./cdn/502117dcda6b1a71004e818c348c9de5fc80966a.css" />
-	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+	<!--[if IE]>
+	<script src="../../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Ported to <a href="http://duelengine.org">DUEL</a> by <a href="http://mck.me">Stephen McKamey</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
 	</footer>
-
+	<script src="../../../assets/base.js"></script>
 	<script src="./cdn/1de7392f10ea2465d68b839144090d158ba7730f.js"></script>
 
 </body>
