--- a/labs/architecture-examples/batman/index.html
+++ b/labs/architecture-examples/batman/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Batman • TodoMVC</title>
 	<link rel="stylesheet" href="../../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<div data-yield="main"></div>
@@ -59,13 +62,12 @@
 		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
-			<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+			<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 			<p>Created by <a href="http://batmanjs.org">Harry Brundage</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 	</div>
 	<script src="../../../assets/base.js"></script>
-	<script src="js/es5-shim.js"></script>
 	<script src="js/lib/batman.js"></script>
 	<script src="js/app.js"></script>
 </body>
