--- a/labs/architecture-examples/dijon/index.html
+++ b/labs/architecture-examples/dijon/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Dijon • TodoMVC</title>
 	<link rel="stylesheet" href="../../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -24,7 +27,7 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Based on app and template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>Based on app and template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://www.creynders.be">Camille Reynders</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
@@ -40,6 +43,7 @@
 	</li>
 	{{/this}}
 	</script>
+	<script src="../../../assets/base.js"></script>
 	<script src="../../../assets/jquery.min.js"></script>
 	<script src="../../../assets/handlebars.min.js"></script>
 	<script src="js/lib/dijon-0.5.3.min.js"></script>
