--- a/labs/architecture-examples/fidel/index.html
+++ b/labs/architecture-examples/fidel/index.html
@@ -1,88 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
-  <head>
-    <title>Fidel</title>
-    <link href="stylesheets/todos.css" media="all" rel="stylesheet" type="text/css"/>
-    <!--<script src="vendor/live.js"></script>-->
-  </head>
-
-  <body>
-
-    <!-- Todo App Interface -->
-
-    <div id="todoapp">
-
-      <div class="title">
-        <h1>Todos</h1>
-      </div>
-
-      <div class="content">
-
-        <div id="create-todo">
-          <input data-element="input" placeholder="What needs to be done?" type="text" />
-          <span class="ui-tooltip-top" style="display:none;">Press Enter to save this task</span>
-        </div>
-
-        <div id="todos">
-          <ul id="todo-list" data-element="todosContainer"></ul>
-        </div>
-
-        <div id="todo-stats" data-element="statsContainer"></div>
-
-      </div>
-
-    </div>
-
-  
-    <div id="credits">
-      <p>Created by
-      <br />
-      <a href="http://jga.me/">Greg Allen</a> (<a href="http://twitter.com/jgaui">jgaui</a>).</p>
-      <br />
-    <p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
-    </div>
-
-    <!-- Templates -->
-
-    <script type="text/template" id="item-template">
-      <li class="todo {!= todo.done ? 'done' : '' !}" data-todoid="{!= todo.guid !}">
-        <div class="display">
-          <input class="check" type="checkbox" {!= todo.done ? 'checked="checked"' : '' !} />
-          <div class="todo-content">{!= todo.name !}</div>
-          <span data-action="destroyTodo" class="todo-destroy"></span>
-        </div>
-        <div class="edit">
-          <input class="todo-input" type="text" value="" />
-        </div>
-      </li>
-    </script>
-
-    <script type="text/template" id="stats-template">
-      {! if (total) { !}
-        <span class="todo-count">
-          <span class="number">{!= remaining !}</span>
-          <span class="word">{!= remaining == 1 ? 'item' : 'items' !}</span> left.
-        </span>
-      {! } !}
-      {! if (done) { !}
-        <span class="todo-clear">
-          <a data-action="clearCompleted" href="#">
-            Clear <span class="number-done">{!= done !}</span>
-            completed <span class="word-done">{!= done == 1 ? 'item' : 'items' !}</span>
-          </a>
-        </span>
-      {! } !}
-    </script>
-
-    <script src="vendor/json2.js"></script>
-    <script src="vendor/jquery-1.6.4.min.js"></script>
-    <script src="vendor/fidel.js"></script>
-    <!--<script src="../../lib/core.js"></script>-->
-    <!--<script src="../../lib/class.js"></script>-->
-    <!--<script src="../../lib/events.js"></script>-->
-    <!--<script src="../../lib/controller.js"></script>-->
-    <script src="app.js"></script>
-  </body>
-
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<title>Fidel</title>
+		<link href="stylesheets/todos.css" rel="stylesheet">
+		<!--[if IE]>
+		<script src="../../../assets/ie.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div id="todoapp">
+			<div class="title">
+				<h1>todos</h1>
+			</div>
+			<div class="content">
+				<div id="create-todo">
+					<input data-element="input" placeholder="What needs to be done?" type="text">
+				</div>
+				<div id="todos">
+					<ul id="todo-list" data-element="todosContainer"></ul>
+				</div>
+				<div id="todo-stats" data-element="statsContainer"></div>
+			</div>
+		</div>
+		<div id="credits">
+			<p>Created by
+			<br />
+			<a href="http://jga.me/">Greg Allen</a> (<a href="http://twitter.com/jgaui">jgaui</a>).</p>
+			<br />
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a>.</p>
+		</div>
+		<script type="text/template" id="item-template">
+			<li class="todo {!= todo.done ? 'done' : '' !}" data-todoid="{!= todo.guid !}">
+				<div class="display">
+					<input class="check" type="checkbox" {!= todo.done ? 'checked="checked"' : '' !} />
+					<div class="todo-content">{!= todo.name !}</div>
+					<span data-action="destroyTodo" class="todo-destroy"></span>
+				</div>
+				<div class="edit">
+					<input class="todo-input" type="text" value="" />
+				</div>
+			</li>
+		</script>
+		<script type="text/template" id="stats-template">
+			{! if (total) { !}
+				<span class="todo-count">
+					<span class="number">{!= remaining !}</span>
+					<span class="word">{!= remaining == 1 ? 'item' : 'items' !}</span> left.
+				</span>
+			{! } !}
+			{! if (done) { !}
+				<span class="todo-clear">
+					<a data-action="clearCompleted" href="#">
+						Clear <span class="number-done">{!= done !}</span>
+						completed <span class="word-done">{!= done == 1 ? 'item' : 'items' !}</span>
+					</a>
+				</span>
+			{! } !}
+		</script>
+		<script src="../../../assets/base.js"></script>
+		<script src="../../../assets/jquery.min.js"></script>
+		<script src="vendor/fidel.js"></script>
+		<script src="app.js"></script>
+	</body>
 </html>
