--- a/labs/architecture-examples/meteor/todo.html
+++ b/labs/architecture-examples/meteor/todo.html
@@ -1,28 +1,28 @@
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Meteor • TodoMVC</title>
+	<!--[if IE]>
+	<script src="../../../assets/ie.js"></script>
+	<![endif]-->
 </head>
-
 <body>
 	<section id="todoapp">
 		{{> todo}}
 	</section>
-
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
-		<p>Created by <a href="https://github.com/siuying">siuying</a>.</p>
-		<p>Modifications by <a href="https://github.com/addyosmani">addyosmani</a>.</p>
+		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
+		<p>Created by <a href="https://github.com/siuying">siuying</a></p>
+		<p>Modifications by <a href="https://github.com/addyosmani">addyosmani</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 </body>
-
 <template name="todo">
 	<header id="header">
 		<h1>todos</h1>
 		<input id="new-todo" placeholder="What needs to be done?" autofocus>
 	</header>
-
 	<section id="main">
 		<input id="toggle-all" type="checkbox">
 		<label for="toggle-all">Mark all as complete</label>
@@ -32,10 +32,8 @@
 			{{/each}}
 		</ul>
 	</section>
-
 	{{> footer}}
 </template>
-
 <template name="item">
 	<li class="{{ editingClass }} {{ completedClass }}">
 		<div class="view">
@@ -46,7 +44,6 @@
 		<input class="edit" value="{{ title }}">
 	</li>
 </template>
-
 <template name="footer">
 	<footer id="footer" class="{{ footerClass }}">
 		<span id="todo-count"><strong id="incompleted">{{ incompleted }}</strong>{{ incompletedText }}</span>
