Update labs site description

--- a/labs/index.html
+++ b/labs/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>TodoMVC Labs</title>
-		<meta name="description" content="A common learning application for popular JavaScript MV* frameworks">
+		<meta name="description" content="A preview of new demo applications for JavaScript MV* frameworks">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
