--- a/architecture-examples/knockback/index.html
+++ b/architecture-examples/knockback/index.html
@@ -1,98 +1,84 @@
-<!DOCTYPE html>
-<html>
-  <!-- Support Localization -->
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Knockback.js • TodoMVC</title>
+	<link rel="stylesheet" href="../../assets/base.css">
+</head>
+<body>
+	<section id="todoapp">
+		<header id="header">
+			<h1>todos</h1>
+			<input id="new-todo" type="text" data-bind="value: header.title, valueUpdate: 'afterkeydown', event: {keyup: header.onAddTodo}" placeholder="What needs to be done?" autofocus>
+		</header>
+		<section id="main" data-bind="block: todos.tasks_exist">
+			<input id="toggle-all" type="checkbox" data-bind="checked: todos.all_completed">
+			<label for="toggle-all">Mark all as complete</label>
+			<ul id="todo-list" data-bind="foreach: todos.todos">
+				<li data-bind="css: {completed: completed, editing: editing}, visible: visible">
+					<div class="view" data-bind="event: {dblclick: onCheckEditBegin}">
+						<input class="toggle" type="checkbox" data-bind="checked: completed" checked>
+						<label data-bind="text: title"></label>
+						<button class="destroy" data-bind="click: onDestroyTodo"></button>
+					</div>
+					<input class="edit" type="text" data-bind="value: title, selectAndFocus: editing, event: {blur: onCheckEditEnd, keyup: onCheckEditEnd}">
+				</li>
+			</ul>
+		</section>
+		<footer id="footer" data-bind="block: todos.tasks_exist">
+			<span id="todo-count">
+				<strong data-bind="text: footer.remaining_count"></strong>
+				<span data-bind="text: footer.remaining_text"></span>
+			</span>
+			<ul id="filters">
+				<li>
+					<a href="#/" data-bind="css: {selected: settings.list_filter_mode()==''}">All</a>
+				</li>
+				<li>
+					<a href="#/active" data-bind="css: {selected: settings.list_filter_mode()=='active'}">Active</a>
+				</li>
+				<li>
+					<a href="#/completed" data-bind="css: {selected: settings.list_filter_mode()=='completed'}">Completed</a>
+				</li>
+			</ul>
+			<button id="clear-completed" data-bind="text: footer.clear_text, block: footer.clear_text, click: footer.onDestroyCompleted"></button>
+		</footer>
+	</section>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>Created by <a href="https://github.com/kmalakoff">Kevin Malakoff</a>. <br/>
+		Please try out the <a href="http://kmalakoff.github.com/knockback-todos/">enhanced version</a> <br/>
+		with localization, priority colors, and lazy loading <br/>
+		to see just how dynamic <a href="https://github.com/kmalakoff/knockback">Knockback.js</a> can be!</p>
+		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+	</footer>
 
-  <head>
-    <title>Knockback Demo: Todos</title>
-    <!-- Demo Dependencies -->
-    <script src="libs/json2.js"></script>
-    <script src="libs/jquery-1.7.min.js"></script>
-    <script src="libs/jquery.tmpl.min.js"></script>
+	<!-- Demo Dependencies -->
+	<script src="js/lib/json2.js"></script>
+	<script src="../../assets/jquery.min.js"></script>
 
-    <!-- Knockback Dependencies -->
-    <script src="dependencies/underscore.js"></script>
-    <script src="dependencies/backbone.js"></script>
-    <script src="dependencies/knockout-2.0.0.js"></script>
-    <script src="dependencies/knockback.js"></script>
+	<!-- Knockback Dependencies -->
+	<script src="js/lib/underscore-min.js"></script>
+	<script src="js/lib/backbone-min.js"></script>
+	<script src="js/lib/knockout-2.0.0.js"></script>
+	<script src="js/lib/knockback.min.js"></script>
 
-    <!-- The Demo -->
-    <link href="css/todos.css" media="all" rel="stylesheet" type="text/css"/>
-    <script src="libs/backbone-localstorage.js"></script>
-    <script src="todos_classic.js"></script>
+	<!-- More Demo Dependencies -->
+	<script src="js/lib/backbone-localstorage.js"></script>
 
-  </head>
+	<!-- Demo Components -->
+	<script src="js/models/todo.js"></script>
+	<script src="js/models/todo_collection.js"></script>
+	<script src="js/viewmodels/settings.js"></script>
+	<script src="js/viewmodels/header.js"></script>
+	<script src="js/viewmodels/todos.js"></script>
+	<script src="js/viewmodels/footer.js"></script>
+	<script src="js/routers/app.js"></script>
 
-  <body>
-
-    <!-- Todo App Interface -->
-    <div id="todoapp">
-
-      <!-- Header Section -->
-      <div id="todo-header">
-        <div class="title">
-          <h1>Todos</h1>
-        </div>
-      </div>
-
-      <!-- Create Todo Section -->
-      <div id="todo-create">
-        <div class="content">
-          <div id="create-todo">
-            <input id="new-todo" type="text" placeholder="What needs to be done?" data-bind="value: create.input_text, event: {keyup: create.addTodo}"/>
-          </div>
-        </div>
-      </div>
-
-      <!-- Todos List Section -->
-      <div id="todo-list">
-        <ul class="todo-list" data-bind="template: {name: 'item-template', foreach: todo_list.todos}"></ul>
-      </div>
-
-      <!-- Stats Section -->
-      <div id="todo-stats">
-        <span class="todo-count" data-bind="text: stats.remaining_text"></span>
-        <span class="todo-clear"> <a href="#" data-bind="text: stats.clear_text, click: stats.onDestroyDone"></a></span>
-      </div>
-
-      <!-- Footer Section -->
-      <div id="todo-footer">
-        <ul id="instructions">
-          <li>Double-click to edit a todo.</li>
-        </ul>
-      </div>
-    </div>
-
-    <div id="credits">
-      Created by
-      <br />
-      <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>
-      <br />
-      <br />
-      Modified to use <a href="https://github.com/kmalakoff/knockback">Knockback.js</a> by
-      <br />
-      <a href="https://github.com/kmalakoff">Kevin Malakoff</a>
-      <br />
-      and
-      <br />
-      <a href="https://github.com/yuchi">Pier Paolo Ramon</a>
-    </div>
-
-    <!-- Templates -->
-    <script type="text/x-jquery-tmpl" id="item-template">
-      <li>
-        <div class="todo" data-bind="css: {done: done, editing: edit_mode}">
-          <div class="display">
-            <input class="check" type="checkbox" data-bind="checked: done" />
-            <div class="todo-text" data-bind="text: text, dblclick: toggleEditMode"></div>
-            <div class="todo-destroy" data-bind="click: destroyTodo"></div>
-          </div>
-          <div class="edit">
-            <input class="todo-input" type="text" data-bind="value: text, event: {keyup: onEnterEndEdit}" />
-          </div>
-        </div>
-      </li>
-    </script>
-  </body>
-
+	<!-- The Demo -->
+	<script src="../../assets/base.js"></script>
+	<script src="js/app.js"></script>
+</body>
 </html>
