Add funnyface.js to labs site

--- a/labs/index.html
+++ b/labs/index.html
@@ -60,16 +60,10 @@
 			<div class="row">
 				<div class="span4">
 					<h2>Introduction</h2>
-
 					<p>TodoMVC Labs showcases sample Todo applications for frameworks that have just been released or are still awaiting consideration for inclusion in <a href="http://todomvc.com">TodoMVC</a>.</p>
-
 					<p>These implementations may not completely meet our specifications just yet, but are functional enough to provide developers with a preview of what they're capable of.</p>
-
 					<p>While our team are working on improving these applications for a future release of TodoMVC, developers wishing to try out brand new frameworks or see what's coming next for this project can preview these applications today.</p>
-
 					<p><em>An * indicates the application is using our latest template. Please note that all applications should be run on a local HTTP server unless we've said otherwise.</em></p>
-					<p></p>
-
 				</div>
 				<div class="span5" id="demos">
 					<h2>Demos</h2>
@@ -91,6 +85,9 @@
 						</li>
 						<li>
 							<a href="architecture-examples/broke/index.html" data-source="https://github.com/brokenseal/broke-client" data-content="The Broke Javascript Framework is a porting of the fantastic Django Web Framework on Javascript. It summarizes all the best concepts present in Django like url resolving, decoupling, DRY principle, project-specific settings and a pretty simple template engine. It could be put in the big Javascript MVC frameworks group outside there, but, as Django is, this is more a MTV (Model-Template-View) framework.">Broke.js</a>
+						</li>
+						<li>
+							<a href="architecture-examples/o_O/index.html" data-source="http://weepy.github.com/o_O/" data-content="o_O: HTML binding for teh lulz: &lt;br>- Elegantly binds objects to HTML&lt;br>- Proxies through jQuery, Ender, etc&lt;br>- Automatic dependency resolution&lt;br>- Plays well with others">Funnyface.js</a>
 						</li>
 						</ul>
 					<ul class="nav nav-pills">
