--- a/architecture-examples/knockback/index.html
+++ b/architecture-examples/knockback/index.html
@@ -66,7 +66,7 @@
 	<script src="js/lib/knockout-2.0.0.js"></script>
 	<script src="js/lib/knockback.min.js"></script>
 	<!-- More Demo Dependencies -->
-	<script src="js/lib/backbone-localstorage.js"></script>
+	<script src="js/lib/backbone.localStorage-min.js"></script>
 	<!-- Demo Components -->
 	<script src="js/models/todo.js"></script>
 	<script src="js/models/todo_collection.js"></script>
