Batman.js: Replace lib with minified

--- a/labs/architecture-examples/batman/index.html
+++ b/labs/architecture-examples/batman/index.html
@@ -68,7 +68,7 @@
 		</footer>
 	</div>
 	<script src="../../../assets/base.js"></script>
-	<script src="js/lib/batman.js"></script>
+	<script src="js/lib/batman.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
