Close #163: PlastronJS app

--- a/labs/index.html
+++ b/labs/index.html
@@ -89,6 +89,9 @@
 						<li>
 							<a href="architecture-examples/o_O/index.html" data-source="http://weepy.github.com/o_O/" data-content="o_O: HTML binding for teh lulz: &lt;br>- Elegantly binds objects to HTML&lt;br>- Proxies through jQuery, Ender, etc&lt;br>- Automatic dependency resolution&lt;br>- Plays well with others">Funnyface.js</a>
 						</li>
+						<li>
+							<a href="architecture-examples/plastronjs/index.html" data-source="https://github.com/rhysbrettbowen/PlastronJS" data-content="PlastronJS is an mvc framework built on top of the Closure Library and built to compile with projects that use the Closure Compiler.">PlastronJS</a>
+						</li>
 						</ul>
 					<ul class="nav nav-pills">
 						<li>
