Move SammyJS to labs

--- a/labs/index.html
+++ b/labs/index.html
@@ -116,6 +116,9 @@
 						<li>
 							<a href="dependency-examples/emberjs_require/index.html" data-source="http://emberjs.com" data-content="Ember is a JavaScript framework for creating ambitious web applications that eliminates boilerplate and provides a standard application architecture. This is an example of using it with AMD modules">Ember.js + RequireJS</a>
 						</li>
+						<li>
+							<a href="architecture-examples/sammyjs/index.html" data-source="http://sammyjs.org/" data-content="Sammy.js is a tiny JavaScript framework developed to ease the pain and provide a basic structure for developing JavaScript applications.">Sammy.js</a>
+						</li>
 					</ul>
 					<ul class="nav nav-pills">
 						<li>
