Fixing showing and hiding of page elements on items selected

--- a/architecture-examples/dojo/index.html
+++ b/architecture-examples/dojo/index.html
@@ -13,9 +13,11 @@
 </head>
 <body class="claro">
     <section id="todoapp" data-dojo-type="todo.app"></section>
-		<div id="credits">
-			Created by <a href="http://jamesthom.as/">James Thomas</a> and <a href="https://github.com/edchat">Ed Chatelain</a>
-		</div>
+	<footer id="info">
+		<p>Double-click to edit a todo</p>
+        <p>Created by <a href="http://jamesthom.as/">James Thomas</a> and <a href="https://github.com/edchat">Ed Chatelain</a></p>
+	</footer>
+	
 	<script src="../../assets/base.js"></script>
 	<script data-dojo-config="async:true, parseOnLoad:true, locale:'en', paths:{'todo':'/code/JavaScript/todomvc/architecture-examples/dojo/js/todo/'}, deps:['dojo/parser', 'todo/app']" src="/code/JavaScript/Libraries/DTK/dojo-release-1.7.2-src/dojo/dojo.js"></script>
 </body>
