Final modifications to match new template.

--- a/architecture-examples/dojo/index.html
+++ b/architecture-examples/dojo/index.html
@@ -19,6 +19,6 @@
 	</footer>
 	
 	<script src="../../assets/base.js"></script>
-	<script data-dojo-config="async:true, parseOnLoad:true, locale:'en', paths:{'todo':'/code/JavaScript/todomvc/architecture-examples/dojo/js/todo/'}, deps:['dojo/parser', 'todo/app']" src="/code/JavaScript/Libraries/DTK/dojo-release-1.7.2-src/dojo/dojo.js"></script>
+	<script data-dojo-config="async:true, parseOnLoad:true, locale:'en', paths:{'todo':'../todo/'}, deps:['dojo/parser', 'todo/app']" src="js/lib/dojo/dojo.js"></script>
 </body>
 </html>
