Close GH-162: Somajs.

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@ had it been designed for web apps">AngularJS</a>
 						<li>
 							<a href="reference-examples/vanillajs/index.html" data-source="https://developer.mozilla.org/en/JavaScript" data-content="You know JavaScript right? :P">Vanilla JS</a>
 						</li>
+						<li>
+							<a href="architecture-examples/somajs/index.html" data-source="http://somajs.github.com/somajs/" data-content="soma.js is a javascript model-view-controller (MVC) framework that is meant to help developers to write loosely-coupled applications to increase scalability and maintainability.">soma.js</a>
+						</li>
 					</ul>
 				</div>
 				<div class="span4">
